<resources>
    <string name="app_name">彩象彩票</string>
    <string name="two_bunch_one">2串1</string>
    <string name="spf_text">非让球</string>
    <string name="result_win">主胜</string>
    <string name="result_ping">平</string>
    <string name="result_loss">主负</string>
    <string name="rqspf_text">让球</string>
    <string name="all_play_type">全部玩法</string>
    <string name="loadingtext">客官,莫急,我在帮您催哦</string>
    <string name="tikuanhint">1、提款不收取任何手续费；\n2、为防止恶意套现，每日提款申请最多为3次， 提款金额不小于10元；\n3、每周一至周日9:00-21:00的提款申请当天处理，21:00以后的 提款申请延至第二天处理（法定假日处理时间另行公示）；\n4、提款处理成功后最快1小时内可到账，若超过 3个工作日未到账，请与本站客服联系；</string>
    <string name="alipay_recharge">支付宝充值</string>
    <string name="wepay_recharge">京东支付</string>
    <string name="recommend">(推荐)</string>
    <string name="alipay_recharge_tips">支付宝用户首选</string>
    <string name="alipay_transfer_tips"></string>
    <string name="mobile_card_recharge">U付-储蓄卡快捷</string>
    <string name="recharge_tip">无需注册 快捷支付</string>
    <string name="credit_card_recharge_tips">快捷方便</string>
    <string name="credit_card_recharge">信用卡充值</string>
    <string name="mobile_card_recharge_tips">通过银行储蓄卡充值</string>
    <string name="alipay_transfer">支付宝转账</string>
    <string name="qrcode">二维码</string>
    <string name="share">分享</string>
    <string name="share_text">彩象彩票购彩神器，随时随地买彩票，中奖利器，分享下，求到好运中个奖不再是什么难事！下载地址：http://chiefree.com/download.html</string>
    <string name="hint_average">各单注的奖金比较平均，任何彩果下盈利基本一致</string>
    <string name="hint_wineasy">命中概率最高的单注奖金最大化，其它趋于保本</string>
    <string name="hint_winhigh">单注奖金较高的方案增加倍数，其它趋于保本</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="confirm">确定</string>
    <string name="hint">温馨提示：</string>
    <string name="bank_hint">银行卡号绑定后无法修改！支行信息务必填写正确，否则提款会被退回。如果有问题请联系客服：021-61600381</string>
    <string name="please_code">请输入验证码</string>
    <string name="username">"旺彩"</string>
    <string name="username2">"彩象真神"</string>
    <string name="phone">"15629650205"</string>
    <string name="obtain_code">获取验证码</string>
    <string name="please_bank_num">请输入银行卡号</string>
    <string name="bank_num">银行卡号：</string>
    <string name="please_branch_bank">请输入开户支行(可选)</string>
    <string name="branch_bank">开户支行：</string>
    <string name="please_realname">请输入真实姓名</string>
    <string name="realname">开户人名：</string>
    <string name="please_bank">请输入开户银行名称</string>
    <string name="bank">开户银行：</string>
    <string name="nickname_hint">\t用户名变更后不可更改，如果有问题请联系客服：021-61600381</string>
    <string name="nickname_et_hint">取一个响亮的名字（限30字符）</string>
    <string name="nickname">用户名：</string>
    <string name="recharge_et_hint">请输入充值金额</string>
    <string name="look_more"><![CDATA[查看更多>>]]></string>
    <string name="join_time">参与时间</string>
    <string name="join_money">金额(元)</string>
    <string name="joiner">参与人</string>
    <string name="joiners">参与人次</string>
    <string name="lottery_order">彩种信息：</string>
    <string name="order_money">订单金额：</string>
    <string name="red_money">现金红包：</string>
    <string name="surplus_money">还需支付：</string>
    <string name="wx_alipay">微信支付</string>
    <string name="alipay_alipay">支付宝支付</string>
    <string name="buy_jz_time_remark">界面赔率仅供参考，请以出票赔率为准。</string>
    <string name="buy_jl_time_remark">赔率，让分数，预设总分仅供参考，请以实际出票数据为准。</string>
    <string name="nobuy_time_remark">夜间购彩暂不出票，官方开启出票后统一出票，赔率以出票为准。</string>
    <string name="jz_dian_remark">开奖结果不包含加时赛及点球大战。</string>
    <string name="buy_notification">    若您已完成支付并扣款成功，有可能存在延迟到账情况。您可查看账户明细或者联系客服。</string>
    <string name="title_activity_h5">H5Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
