<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_box" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_heigh"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/et_name"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bank" />

            <TextView
                android:id="@+id/bank_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:hint="@string/please_bank"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_heigh"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/et_name"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/realname" />

            <EditText
                android:id="@+id/bank_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_realname"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_heigh"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/et_name"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/branch_bank" />

            <EditText
                android:id="@+id/bank_name_small"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_branch_bank"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_heigh"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/et_name"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bank_num" />

            <EditText
                android:id="@+id/bank_idcard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_bank_num"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_box" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_box" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_heigh">

            <ImageView
                android:id="@+id/image_code_logo"
                android:layout_width="@dimen/tubiao_size"
                android:layout_height="@dimen/tubiao_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/safe" />


            <TextView
                android:id="@+id/text_obtain_code"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/obtain_code"
                android:textColor="@color/red_theme"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/edit_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@id/text_obtain_code"
                android:layout_toRightOf="@id/image_code_logo"
                android:background="@null"
                android:hint="@string/please_code"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHint="@color/gray_txt"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/text_obtain_code"
                android:background="@color/gray_box" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/gray_bg" />

    <Button
        android:id="@+id/bank_comit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_btn"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
