<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/join_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/joiners"
        android:textColor="@color/gray_txt"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ball_size"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#f4f3f1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gray_cell_shape"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/joiner"
            android:textColor="@color/deep_txt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@drawable/gray_cell_shape"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/join_money"
            android:textColor="@color/deep_txt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gray_cell_shape"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/join_time"
            android:textColor="@color/deep_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shap_joiner"
        android:orientation="vertical">

        <com.daxiang.lottery.view.BillListView
            android:id="@+id/lv_join_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@color/gray_box"
            android:dividerHeight="0.5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_box" />

        <TextView
            android:id="@+id/look_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/look_more"
            android:textColor="@color/blue_txt"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>