<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_clear_form"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/bet_order_delete_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_host"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxEms="5"
                    android:singleLine="true"
                    android:text="sdflsfd"
                    android:textColor="@color/deep_txt"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="VS"
                    android:textColor="@color/gray_txt"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_guest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxEms="5"
                    android:singleLine="true"
                    android:text="sdgasdff"
                    android:textColor="@color/deep_txt"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_game"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.2"
                android:gravity="center"
                android:orientation="horizontal"
               >

                <LinearLayout
                    android:id="@+id/jz_win_ll"
                    style="@style/jc_item_result">

                    <TextView
                        android:id="@+id/tv_win_lable"
                        style="@style/jczq_lable"
                        android:text="@string/result_win" />

                    <TextView
                        android:id="@+id/tv_host_sp"
                        style="@style/jczq_sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/jz_ping_ll"
                    style="@style/jc_item_result">

                    <TextView
                        android:id="@+id/tv_ping_lable"
                        style="@style/jczq_lable"
                        android:text="@string/result_ping" />

                    <TextView
                        android:id="@+id/tv_versus_sp"
                        style="@style/jczq_sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/jz_loss_ll"
                    style="@style/jc_item_result">

                    <TextView
                        android:id="@+id/tv_loss_lable"
                        style="@style/jczq_lable"
                        android:text="@string/result_loss" />

                    <TextView
                        android:id="@+id/tv_guest_sp"
                        style="@style/jczq_sp"
                        android:text="safsf" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray_box" />
</LinearLayout>